--- a/contact_us.html
+++ b/contact_us.html
@@ -136,7 +136,7 @@
       <img src="Images/shape.png" class="square" alt="" />
       <div class="form">
         <div class="contact-info">
-          <h3 class="title">Contact Our Team in <br />Sri Lanka</h3>
+          <h3 class="title">Contact Our Team in <br /><span style="color: #f2192a;">Sri Lanka</span></h3>
           <p class="text">We would love to hear from you!</p>
 
           <div class="info">
