--- a/contact_us_australia.html
+++ b/contact_us_australia.html
@@ -138,23 +138,23 @@
       <img src="Images/shape.png" class="square" alt="" />
       <div class="form">
         <div class="contact-info">
-          <h3 class="title">Contact Our Team in <br />Sri Lanka</h3>
-          <p class="text">Hello, there! We’ll be glad to hear from you.</p>
+          <h3 class="title">Contact Our Team in <br /><span style="color: #f2192a;">Australia</span></h3>
+          <p class="text">We would love to hear from you!</p>
 
           <div class="info">
             <div class="information">
               <img src="Images/location.png" class="icon" alt="" />
               <p>
-                4th Floor, 181, High Level Rd, Maharagama 10280, Sri Lanka
+                7 Opal Ct, Narre Warren VIC 3805,Australia.
               </p>
             </div>
             <div class="information">
               <img src="Images/email.png" class="icon" alt="" />
-              <p>info@wediditglobal.com</p>
+              <p>info@wediditglobal.com.au</p>
             </div>
             <div class="information">
               <img src="Images/phone.png" class="icon" alt="" />
-              <p>(+94) 76 538 7535</p>
+              <p>(+61) 450 428 571</p>
             </div>
           </div>
 
