our team update

--- a/our_team_sri_lanka.html
+++ b/our_team_sri_lanka.html
@@ -268,7 +268,7 @@
                     </div>
 
                     <div class="item">
-                        <image src="Images\m16.png" alt="team" />
+                        <image src="Images\m16.jpg" alt="team" />
                         <div class="inner">
                             <div class="info">
                                 <h5>Chanodya Indusara </h5>
@@ -301,7 +301,7 @@
 
 
                     <div class="item">
-                        <image src="Images\m17.png" alt="team" />
+                        <image src="Images\m17.jpg" alt="team" />
                         <div class="inner">
                             <div class="info">
                                 <h5>Ishani Jayathilake </h5>
