minior chanfges home

--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
                     INTERNATIONALLY RECOGNIZED MUSIC LICENCING
                 </h1>
                 <p class="heroSection__heroContent__description">
-                    Register your music in an internationally recognized catalogue so you recieve the royalties and
-                    credit you deserve.
+                    Register your music in an internationally recognized catalogue so you receive the royalties and credit you deserve.
                 </p>
                 <div class="heroSection__heroContent__servicesSection">
                     <div class="heroSection__heroContent__servicesSection__serviceCard">
                         <img src="images/index-assets/global_recognition_icon.svg" alt="Global Recognition"
                             class="heroSection__heroContent__servicesSection__serviceCard__icon" />
                         <p class="heroSection__heroContent__servicesSection__serviceCard__title">
-                            Gloabal <br />
-                            Recognition
+                            Global <br />Recognition 
+                           
                         </p>
                     </div>
                     <div class="heroSection__heroContent__servicesSection__serviceCard">
@@ -174,10 +173,10 @@
                             SYNC LICENCING
                         </div>
                         <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan to use copyright music in your video production
+                            If you plan on using copyrighted music in your video production.
                         </div>
                         <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Advertisements , Television , movies, youtube videos etc.
+                            Eg: Advertisements, Television, Movies, Youtube Videos etc.
                         </div>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -194,11 +193,10 @@
                             MECHANICAL LICENCING
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan to re-produce or recreate an existing piece of music such as cover song or
-                            destribute the original music as physical copies.
+                            If you plan on reproducing or recreating an existing piece of music such as a cover song or distributing the original music as physical copies.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Advertisements , Television , movies, youtube videos etc.
+                            Eg: Advertisements, Television, movies, Youtube Videos etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -212,13 +210,13 @@
                     </div>
                     <div class="copyrightTypesSection__licenceTypesContainer__licenceCard__content">
                         <h3 class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_title">
-                            PUBLIC PERFORMENCE
+                            PUBLIC PERFORMANCE
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
                             If You plan to play existing music publicly.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Live Performences , Restaurents, Stores, etc.
+                            Eg: Live Concerts, Restaurants, Stores, etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -235,10 +233,10 @@
                             MASTER LICENCING
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If Your using already recorded music in your original work or derivative work.
+                            If you are using already recorded music in your original work or derivative work.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Sampling , Mashups , Radio etc.
+                            Eg: Sampling, Mashups, Radio, etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -255,10 +253,10 @@
                             PRINT RIGHTS
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan to print sheet music, display lyrics of a song created or rearrange sheet music.
+                            If you plan on printing sheet music, displaying lyrics of a song created or rearranging sheet music.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Lyric Displays in Websites Song Rearrangement etc.
+                            Eg: Lyric Displays in Websites, Song Rearrangement etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -275,10 +273,10 @@
                             THEATRICAL LICENSE
                         </h3>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_description">
-                            If you plan to use copyright music in your stage performance.
+                            If you plan on using copyrighted music in your stage performance.
                         </p>
                         <p class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_example">
-                            examples : Stage Perfomance
+                            Eg: Plays, Concerts, Improv, etc.
                         </p>
                         <a href="licence_request_form.html"
                             class="copyrightTypesSection__licenceTypesContainer__licenceCard__content_button">
@@ -315,11 +313,11 @@
                     Copyright ?
                 </h1>
                 <p class="copyrightViolationSection_content_subheading">
-                    Once your a member
+                    Once you are a member,
                     <br />
-                    <em class="copyrightViolationSection_content_subheading--emphasis"> we protect your music like its
-                        ours
-                        <br /> regardless of who your are </em> <br /> or who violated your copyrights.
+                    <em class="copyrightViolationSection_content_subheading--emphasis"> wwe protect your music like it’s our own; 
+                        <br /> regardless of who you are  </em> <br /> or who violated your copyrights.
+
                 </p>
                 <a href="report_form.html" class="copyrightViolationSection_content_button">
                     Report Violation
@@ -364,8 +362,9 @@
                     in Sri Lanka
                 </h1>
                 <p>
-                    We proudly represent some of Sri Lankas <br />
-                    finest writers , composersand performers.
+                    We proudly represent some of Sri Lanka’s <br />
+                    finest writers, composers and performers.
+
                 </p>
 
                 <a href="members.html" class="primary_CTA">
